<?xml version="1.0" encoding="utf-8"?>
    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AdvertForm"
        android:layout_gravity="center"
        android:gravity="center"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_weight="0"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/radioPostLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/postTypeText"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.082" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="159dp"
            android:layout_height="29dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="53dp">

            <RadioButton
                android:checked = "true"
                android:id="@+id/radioLostBtn"
                android:layout_width="72dp"
                android:layout_height="33dp"
                android:text="@string/radioLostText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radioFoundBtn"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:text="@string/radioFoundText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.655"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="126dp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="Phone"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="206dp" />

        <EditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="2"
            android:hint="Description"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="292dp" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="date"
            android:minHeight="48dp"
            android:hint="Date"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="452dp" />

        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="Location"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="551dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/formActionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveAdvertBtnText"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="641dp" />

    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>